--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
     name: crypto-signal-bot
-    runtime: python
-    buildCommand: pip install -r requirements.txt
+    env: python
+    buildCommand: ""
     startCommand: python bot.py
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
+    plan: free
+    branch: main
+    runtime: python
+    region: oregon
+
